<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--<string name="TOKEN" translatable="false" >d35e68f1360a408ab20943c972185e69</string>-->
    <!--<string name="BLE_PROJECT_ID" translatable="false" >589a8701cb4a9a2b0900004d</string>-->
    <!--<string name="WIFI_PROJECT_ID" translatable="false" >589a8706cb4a9a2b0900004e</string>-->

    <string name="app_name">HKIA Demo</string>
    <string name="positioning">Positioning…</string>
    <string name="settings">Setting</string>
    <string name="Search">Search</string>
    <string name="exit">Gateway</string>
    <string name="food">Food</string>
    <string name="refreshment">Drink</string>
    <string name="toilet">Toilet</string>
    <string name="shopping">Shopping</string>
    <string name="atm">ATM</string>
    <string name="takeme">Take Me</string>
    <string name="arrangepath">Routing</string>
    <string name="detail">More</string>
    <string-array name="more">
        <item>Setting</item>
        <item>About Us</item>
        <item>Feedback</item>
    </string-array>
    <string name="no_location_region">There are no「%1$s」in this area.</string>
    <string name="detail_info">Total have %1$d results</string>
    <string name="start_navi">Start Navigation</string>
    <string name="start_preview">Path Preview</string>
    <string name="cancel_navi">Cancel Navigation</string>
    <string name="cancel_preview">Cancel Path Preview</string>
    <string name="up_remind">Please Go Upstairs</string>
    <string name="down_remind">Please Go Downstairs</string>
    <string name="target">Destination</string>
    <string name="myposition">My Position</string>
    <string name="set_start_point">Set Start Point</string>
    <string name="set_end_point">Set End Point</string>
    <string name="action_aboutus">About MyMap</string>
    <string name="action_feedback">Feedback</string>
    <string name="start_info">Please choose one POI as start point</string>
    <string name="end_info">Please choose one POI as end point</string>
    <string name="elevator_only">Elevator only</string>
    <string name="not_enough_accuracy">Not enough accurate?</string>
    <string name="not_in_this_building">Not collect locating data or enable location engine yet</string>
    <string name="route_fail_msg">Sorry, the condition you set can\'t route successfully.Please check if you already upload path file.Thanks.</string>
    <string name="processing">Processing…</string>
    <string name="back_navi">Resume</string>
    <!-- Welcome -->
    <string name="terms_service_disclaimer">"Terms of SAILS service"</string> <!--Terms of Service &amp; Disclaimer-->
    <string name="skip">Skip</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="imap_welcome_title">Welcome SAILS MyMap</string>
    <string name="imap_check_wifi_msg">Dear user,\nif you are not turn on bluetooth, only you can do is preview the route.\nIf you want to experience indoor positioning, please turn on bluetooth first. Thanks.</string>
    <!-- service -->
    <string name="welcome_wuquanpark">Welcome</string>
    <string name="introduction">View Profile</string>
    <string name="push_msg_service">Background Push Service</string>
    <string name="notification_vibrate">Notification Vibration</string>
    <string name="check_interval_min_param">Check every %d seconds</string>
    <string name="dg_internet_no_network">Cannot connect to server, please check the network!</string>
    <string name="action_loadproject">Choose Project</string>
    <string name="action_enable_location">Start Positioning</string>
    <string name="action_disable_location">Stop Positioning</string>
    <string name="action_logout">Logout</string>
    <string name="floorguide">Floor Guide</string>
    <string name="network_error">Error</string>
    <string name="network_error_msg">connect to server error, please take this tablet to the information center.</string>
    <string name="ok">OK</string>
    <string name="enter">Enter</string>
    <string name="action_load_wifi_project">Load WiFi Project</string>
    <string name="action_load_ble_project">Load Bluetooth Project</string>
</resources>
